# obtask

./: CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
src/obtask/: cli.py  core.py  display.py
